# dnf-plugin-p2p

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO.md  bump-version.py  dnf-plugin-p2p.spec  libdnf-p2p-sharing.spec  setup.cfg
.agents/rules/: coding.md
.copr/: Makefile
.github/workflows/: ci-cd.yml
doc/: CMakeLists.txt  architecture.rst  conf.py  configuration.rst  development.rst  index.rst  installation.rst  usage.rst
etc/: CMakeLists.txt
etc/dnf/: CMakeLists.txt
etc/dnf/libdnf-plugins/: CMakeLists.txt
etc/dnf/libdnf5-plugins/: CMakeLists.txt  p2p_plugin.conf
etc/environment.d/: CMakeLists.txt  libdnf-python-plugin.conf  libdnf-python-plugin.conf.in
etc/profile.d/: CMakeLists.txt  libdnf-python-plugin.sh  libdnf-python-plugin.sh.in
libdnf5-plugins/: CMakeLists.txt  __init__.py  p2p_plugin.py
libdnf5-plugins/libdnf_p2p_sharing/: CMakeLists.txt  __init__.py
p2p-proxy-server/: CMakeLists.txt  __init__.py  dnf-p2p-client  p2p_cache.py  p2p_libp2p.py  p2p_peer_discovery.py  p2p_server.py
plugins/: CMakeLists.txt  p2p_plugin.py
plugins/libdnf_p2p_sharing/: __init__.py  peer_discovery.py
po/: CMakeLists.txt
systemd/: CMakeLists.txt  dnf-p2p-proxy.service
systemd/sysusers.d/: dnf-p2p.conf
tests/: __init__.py  test_p2p_cache.py  test_p2p_libp2p.py  test_p2p_plugin.py  test_p2p_server.py
