INSTALL (FILES p2p_server.py DESTINATION ${CMAKE_INSTALL_LIBEXECDIR}/libdnf-p2p-sharing)
INSTALL (FILES p2p_cache.py DESTINATION ${CMAKE_INSTALL_LIBEXECDIR}/libdnf-p2p-sharing)
INSTALL (FILES p2p_libp2p.py DESTINATION ${CMAKE_INSTALL_LIBEXECDIR}/libdnf-p2p-sharing)
INSTALL (FILES __init__.py DESTINATION ${CMAKE_INSTALL_LIBEXECDIR}/libdnf-p2p-sharing)
