INSTALL (FILES p2p_server.py DESTINATION ${CMAKE_INSTALL_LIBEXECDIR}/dnf-plugin-p2p)
INSTALL (FILES p2p_cache.py DESTINATION ${CMAKE_INSTALL_LIBEXECDIR}/dnf-plugin-p2p)
INSTALL (FILES p2p_libp2p.py DESTINATION ${CMAKE_INSTALL_LIBEXECDIR}/dnf-plugin-p2p)
INSTALL (FILES __init__.py DESTINATION ${CMAKE_INSTALL_LIBEXECDIR}/dnf-plugin-p2p)
INSTALL (PROGRAMS dnf-p2p-client DESTINATION ${CMAKE_INSTALL_BINDIR})

